/**
 * Copyright 2018-2020 Streamlit Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/

syntax = "proto3";

message IFrame {
  string src = 1;
  string srcdoc = 2;

  float width = 3;
  bool has_width = 4;
  float height = 5;

  string name = 6;

  string allow = 7;
  bool allow_fullscreen = 8;
  string referrer_policy = 9;

  string sandbox = 10;
  bool has_sandbox = 11;
}
